--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,8 @@ set -sg escape-time 1
 # remap split panes
 bind | split-window -h
 bind - split-window -v
+bind h split-window -h
+bind s split-window -v
 
 # shift < or > through panes
 bind -n S-Left  previous-window
