--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ set -g repeat-time 2000
 # colors
 set -g default-terminal "screen-256color"
 
+# Start window numbering at 1
+set -g base-index 1
+
 # mouse mode (scrolling, etc)
 # tmux 2.1
 setw -g mouse on
@@ -21,9 +24,57 @@ set -sg escape-time 1
 # remap split panes
 bind | split-window -h
 bind - split-window -v
-bind h split-window -h
-bind s split-window -v
 
 # shift < or > through panes
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+
+# Gotta have the clipboard
+set -g set-clipboard on
+
+# Show more characters in session name
+set -g status-left-length 50
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+# Colortags
+TMUX_COLORTAG_USE_POWERLINE=yes
+
+# SSH hostnames
+run-shell ~/.tmux/plugins/tmux-current-pane-hostname/current_pane_hostname.tmux
+
+# Continuum
+set -g @continuum-restore 'on'
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'Determinant/tmux-colortag'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
+
+source-file ~/.tmux/tmux.snazzy.theme
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
