Updating tmux more.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,11 +55,15 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-# Colortags
-TMUX_COLORTAG_USE_POWERLINE=yes
+# Status bar lewks
+set -g status-bg "black"
+set -g status-fg "color250"
+set -g status-left " #[fg=color169,bold][#S] #[fg=color172](#U@#H#{?#{pane_ssh_port},:#{pane_ssh_port},})#[default] "
+set -g status-right "#[fg=color169]%A, %d %b %Y %I:%M %p "
+set -g message-style "bg=white,fg=black,bold"
 
-# SSH hostnames
-run-shell ~/.tmux/plugins/tmux-current-pane-hostname/current_pane_hostname.tmux
+# Resurrect options
+set -g @resurrect-processes 'ssh'
 
 # Continuum
 set -g @continuum-restore 'on'
@@ -71,10 +75,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'Determinant/tmux-colortag'
-set -g @plugin 'soyuka/tmux-current-pane-hostname'
-
-source-file ~/.tmux/tmux.snazzy.theme
+set -g @plugin "soyuka/tmux-current-pane-hostname"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
