Updating tmux more.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,10 +56,11 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Status bar lewks
+set -g status on
 set -g status-bg "black"
 set -g status-fg "color250"
 set -g status-left " #[fg=color169,bold][#S] #[fg=color172](#U@#H#{?#{pane_ssh_port},:#{pane_ssh_port},})#[default] "
-set -g status-right "#[fg=color169]%A, %d %b %Y %I:%M %p "
+set -g status-right "#[fg=color255,bold,bg=color169] %A, %d %b %Y %I:%M %p "
 set -g message-style "bg=white,fg=black,bold"
 
 # Resurrect options
