--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded."
 set -g repeat-time 2000
 
 # colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # Start window numbering at 1
 set -g base-index 1
